<resources>
    <string name="app_name">RestAPI</string>

    <string name="activity_main_button">go!</string>
    <string name="activity_main_twit_button">트윗하기</string>
    <string name="acitivty_main_twitter_time_line_get_button">타임라인 받아오기</string>

    <string name="activity_reply_twitter_reply_button">답장하기</string>

    <string name="facebook_app_id">1738070796478578</string>
    <string name="facebook_url">https://m.facebook.com/home.php</string>
    <string name="facebook_login_url">https://m.facebook.com/?_rdr</string>
    <string name="facebook_register_device_url">https://m.facebook.com/login/save-device/#_=_</string>
    <string name="facebook_setting_url">https://m.facebook.com/home.php?soft=bookmarks</string>

    <string name="kakao_app_key">2b3b894cfd9d116da24862f7c06b8171</string>
    <string name="kakao_scheme">kakao2b3b894cfd9d116da24862f7c06b8171</string>
    <string name="kakaostory_host">kakaostory</string>
    <string name="kakao_url">https://story.kakao.com/</string>
    <string name="kakao_logout_url">https://story.kakao.com/s/logout</string>
    <string name="kakao_login_url">https://story.kakao.com/s/login</string>

    <string name="twitter_url">https://mobile.twitter.com/home</string>
    <string name="twitter_login_url">https://mobile.twitter.com/login</string>
    <string name="twitter_logout_url">https://mobile.twitter.com/logout</string>


    <string name="twitter_article_view_name">홍길동</string>
    <string name="twitter_article_view_screen_name">\@hong_hong</string>
    <string name="twitter_article_view_text">오늘은 너무 더웠다\n더워서 짜증났다</string>
    <string name="twitter_article_view_time">n시간</string>
    <string name="twitter_article_view_reply">답글하기</string>
    <string name="twitter_article_view_retweet">리트윗</string>
    <string name="twitter_article_view_retweetd">리트윗 취소</string>
    <string name="twitter_article_view_like">마음</string>
    <string name="twitter_article_view_favorited">마음 취소</string>
    <string name="twitter_article_view_more">더보기</string>

    <string name="facebook_article_default_header">임꺽정님이 좋아합니다.</string>
    <string name="facebook_article_default_title">홍길동님이 무얼 했습니다.</string>
    <string name="facebook_article_default_time">123시간 전</string>
    <string name="facebook_article_default_content">내용</string>
    <string name="facebook_article_default_sympathy">임꺽정님 외 00명</string>
    <string name="facebook_article_default_share">공유 0회</string>
    <string name="facebook_article_default_comment">댓글 0개</string>
    <string name="facebook_article_default_like_button">좋아요</string>
    <string name="facebook_article_default_comment_button">댓글 달기</string>
    <string name="facebook_article_default_share_button">공유하기</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_facebook">페이스북</string>
    <string name="navigation_twitter">트위터</string>
    <string name="navigation_kakao">카카오스토리</string>
    <string name="navigation_setting">설정</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="article_add_add">추가</string>
    <string name="article_add_cancel">취소</string>

    <string name="activity_setting_login">로그인</string>

    <string name="activity_setting_facebook_login">페이스북 로그인</string>
    <string name="activity_setting_facebook_logout">페이스북 로그아웃</string>
    <string name="activity_setting_facebook_profile">페이스북 프로필</string>
    <string name="activity_setting_facebook_friends">페이스북 친구</string>
    <string name="activity_setting_twitter_login">트위터 로그인</string>
    <string name="activity_setting_twitter_logout">트위터 로그아웃</string>
    <string name="activity_setting_twitter_profile">트위터 프로필</string>
    <string name="activity_setting_twitter_following">트위터 following</string>
    <string name="activity_setting_twitter_follower">트위터 follower</string>
    <string name="activity_setting_kakao_login">카카오 로그인</string>
    <string name="activity_setting_kakao_logout">카카오 로그아웃</string>
</resources>
