<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white"
    android:layout_marginBottom="@dimen/article_margin_bottom">

    <TextView
        android:id="@+id/article_facebook_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/article_inside_margin"
        android:textSize="@dimen/article_classification_text_size"
        android:gravity="end"/>

    <LinearLayout
        android:id="@+id/facebook_article_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/facebook_article_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/article_inside_margin"
            android:textSize="13sp"
            android:text="@string/facebook_article_default_header"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/facebook_window_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_inside_margin"
        android:layout_marginStart="@dimen/article_inside_margin"
        android:layout_marginEnd="@dimen/article_inside_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/facebook_article_profile_img"
                android:layout_width="@dimen/article_profile_size"
                android:layout_height="@dimen/article_profile_size"
                android:background="@drawable/default_profile_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/article_title_margin_left">

                <TextView
                    android:id="@+id/facebook_article_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_article_default_title"
                    android:textSize="@dimen/article_title_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/facebook"/>

                <TextView
                    android:id="@+id/facebook_article_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_article_default_time"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/facebook_article_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_article_default_content"
            android:layout_marginTop="@dimen/article_content_margin_top"/>

        <LinearLayout
            android:id="@+id/facebook_article_media_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/article_content_margin_top"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/article_content_margin_top">

            <TextView
                android:id="@+id/facebook_article_sympathy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/facebook_article_default_sympathy"/>

            <TextView
                android:id="@+id/facebook_article_sharing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/facebook_article_default_share"/>

            <TextView
                android:id="@+id/facebook_article_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/facebook_article_sharing"
                android:text="@string/facebook_article_default_comment"/>

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/article_inside_margin"
        android:background="@color/facebook_comment_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/facebook_article_like_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_article_default_like_button"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/facebook_article_comment_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_article_default_comment_button"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/facebook_article_share_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_article_default_share_button"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>


</LinearLayout>