<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">

    <TextView
        android:id="@+id/twitter_article_view_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/twitter_article_view_is_retweeted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/twitter_gray_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/twitter_article_view_profile_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:id="@+id/example001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/twitter_article_inside_layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/twitter_article_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/twitter_article_view_name"
                        android:textStyle="bold"
                        android:textSize="@dimen/twitter_article_name_text_size"/>
                    <TextView
                        android:id="@+id/twitter_article_view_screen_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/twitter_article_screen_name_left_margin"
                        android:text="@string/twitter_article_view_screen_name"
                        android:textColor="@color/twitter_gray_text"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/twitter_article_view_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter_article_view_time"/>

                <TextView
                    android:id="@+id/twitter_article_view_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/twitter_article_content_top_margin"
                    android:text="@string/twitter_article_view_text"/>

                <LinearLayout
                    android:id="@+id/twitter_article_view_media_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_reply"
            android:textSize="@dimen/twitter_article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_retweet"
            android:textSize="@dimen/twitter_article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_like"
            android:textSize="@dimen/twitter_article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_more"
            android:textSize="@dimen/twitter_article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pure_dark"
        android:layout_alignParentBottom="true"/>
</LinearLayout>