<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <WebView
                    android:id="@+id/kakao_article_profile_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </WebView>
            </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/kakao_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/facebook_article_default_title"
                android:textSize="17sp"
                android:textColor="@color/pure_dark"/>

            <TextView
                android:id="@+id/kakao_article_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_article_default_time"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/kakao_article_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:text="@string/facebook_article_default_content"/>

    <LinearLayout
        android:id="@+id/kakao_article_media_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/facebook_comment_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/facebook_article_button_bar_background">

        <Button
            android:id="@+id/kakao_article_like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="느낌"/>

        <Button
            android:id="@+id/kakao_article_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_article_default_comment_button"/>

        <Button
            android:id="@+id/kakao_article_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facebook_article_default_share_button"/>
    </LinearLayout>


</LinearLayout>