<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/pure_white"
android:layout_marginBottom="@dimen/article_margin_bottom"
android:orientation="vertical">

    <TextView
        android:id="@+id/article_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/article_inside_margin"
        android:textSize="@dimen/article_classification_text_size"
        android:gravity="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_inside_margin"
        android:layout_marginStart="@dimen/article_inside_margin"
        android:layout_marginEnd="@dimen/article_inside_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/article_title_margin_left">

                <TextView
                    android:id="@+id/article_rss_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_article_default_title"
                    android:textSize="@dimen/article_title_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/pure_dark"/>

                <TextView
                    android:id="@+id/article_rss_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook_article_default_time"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/article_rss_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_article_default_content"
            android:layout_marginTop="@dimen/article_content_margin_top"/>

        <LinearLayout
            android:id="@+id/article_rss_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/article_content_margin_top"/>
    </LinearLayout>
</LinearLayout>