<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    android:background="@color/pure_white">

    <TextView
        android:id="@+id/twitter_article_view_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/article_inside_margin"
        android:textSize="@dimen/article_classification_text_size"
        android:gravity="end"/>

    <LinearLayout
        android:id="@+id/twitter_article_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/twitter_article_view_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/article_inside_margin"
            android:text="누가 리트윗 했습니다"
            android:textColor="@color/twitter_gray_text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/facebook_window_background" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/article_inside_margin"
        android:layout_marginStart="@dimen/article_inside_margin"
        android:layout_marginEnd="@dimen/article_inside_margin">

        <ImageView
            android:id="@+id/twitter_article_view_profile_image_view"
            android:layout_width="@dimen/article_profile_size"
            android:layout_height="@dimen/article_profile_size"
            android:layout_marginEnd="@dimen/article_title_margin_left"
            android:background="@drawable/default_profile_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/twitter_article_view_profile_image_view"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/twitter_article_view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/twitter_article_view_time"
                    android:textSize="@dimen/twitter_article_screen_name_text_size"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/twitter_article_view_time">
                    <TextView
                        android:id="@+id/twitter_article_view_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/twitter_article_screen_name_left_margin"
                        android:text="홍길동"
                        android:textStyle="bold"
                        android:textSize="@dimen/article_title_text_size"
                        android:textColor="@color/twitter"
                        android:ellipsize="end"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/twitter_article_view_screen_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/twitter_article_view_name"
                        android:text="@string/twitter_article_view_screen_name"
                        android:textSize="@dimen/twitter_article_screen_name_text_size"
                        android:textColor="@color/twitter_gray_text"
                        android:maxLines="1"/>
                </RelativeLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/twitter_article_view_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/article_content_margin_top"
                android:text="@string/twitter_article_view_text"
                android:textSize="@dimen/twitter_article_content_text_size"/>

            <LinearLayout
                android:id="@+id/twitter_article_view_media_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/article_content_margin_top"
                android:orientation="vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/twitter_article_view_reply"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_twitter_arti_reply"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/twitter_article_view_retweet"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_twitter_arti_retweet_default"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/twitter_article_view_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_twitter_arti_favorite_default"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_twitter_arti_message"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">




        <!--<Button
            android:id="@+id/twitter_article_view_reply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_reply"
            android:textSize="@dimen/article_bottom_button_text_size"
            android:background="@drawable/icon_twitter_arti_reply"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/twitter_article_view_retweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_retweet"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/twitter_article_view_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_like"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/twitter_article_view_more"
            android:textSize="@dimen/article_bottom_button_text_size"
            style="?android:attr/borderlessButtonStyle"/>-->
    </LinearLayout>
</LinearLayout>